Make Hegel and Boots trusted proxies required
There's no way to deploy Boots or Hegel such that trusted proxies aren't
required so we should error out if not present.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: ec93ed5e1cc98e85d3bf744ed52beadfb13f5122

--- a/charts/tinkerbell/boots/templates/deployment.yaml
+++ b/charts/tinkerbell/boots/templates/deployment.yaml
@@ -34,16 +34,12 @@ spec:
           {{- end }}
           {{- end }}
           env:
-            {{ with .Values.boots.trustedProxies }}
             - name: TRUSTED_PROXIES
-              value: {{ . | quote }}
-            {{- end }}
-          {{- if .Values.boots.env }}
+              value: {{ required "missing boots.trustedProxies" .Values.boots.trustedProxies | quote }}
             {{- range $i, $env := .Values.boots.env }}
             - name: {{ $env.name | quote }}
               value: {{ $env.value | quote }}
             {{- end }}
-          {{- end }}
           {{- if not .Values.boots.hostNetwork }}
           ports:
             {{- range .Values.boots.ports }}
