Update Kubevip version and interface and Boots deployment strategy:
Removing the requirement for an interface for Kubevip allows
Kubevip to auto discover the interface to use. Kubevip does this
by looking for the interface that holds the default route.

Updating Boots' deployment strategy fixes an issue with
single node deployments being unable to upgrade Boots
because of host ports being in use.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: d88c59d93e35de9c4e68abdcf2f80b7a6d9a030e

--- a/charts/tinkerbell/boots/values.yaml
+++ b/charts/tinkerbell/boots/values.yaml
@@ -15,6 +15,9 @@ boots: # a top-level key like this enables importing of all sub-keys in parent c
       memory: 64Mi
   roleName: boots-role
   roleBindingName: boots-rolebinding
+  deployment:
+    strategy:
+      type: Recreate
   trustedProxies: ""
   ports:
   - name: boots-dhcp
