--- a/charts/tinkerbell/boots/templates/deployment.yaml
+++ b/charts/tinkerbell/boots/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       {{- with .Values.boots.selector }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
+  strategy:
+    type: {{ .Values.boots.deployment.strategy.type }}
   template:
     metadata:
       labels:
