--- a/charts/tinkerbell/stack/templates/kubevip.yaml
+++ b/charts/tinkerbell/stack/templates/kubevip.yaml
@@ -27,8 +27,10 @@ spec:
           value: "true"
         - name: svc_election
           value: "true"
+        {{- if .Values.stack.kubevip.interface }}
         - name: vip_interface
           value: {{ .Values.stack.kubevip.interface }}
+        {{- end }}
         image: {{ .Values.stack.kubevip.image }}
         imagePullPolicy: {{ .Values.stack.kubevip.imagePullPolicy }}
         name: {{ .Values.stack.kubevip.name }}
