--- a/charts/tinkerbell/hegel/templates/service-account.yaml
+++ b/charts/tinkerbell/hegel/templates/service-account.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.hegel.deploy }}
+{{- if .Values.deploy }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.hegel.name }}
+  name: {{ .Values.name }}
   namespace: {{ .Release.Namespace | quote }}
 {{- end }}
