--- a/charts/tinkerbell/tink/templates/tink-controller/service-account.yaml
+++ b/charts/tinkerbell/tink/templates/tink-controller/service-account.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.tink.controller.deploy }}
+{{- if .Values.controller.deploy }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.tink.controller.name }}
+  name: {{ .Values.controller.name }}
   namespace: {{ .Release.Namespace | quote }}
 {{- end }}
