--- a/charts/tinkerbell/boots/templates/rolebinding.yaml
+++ b/charts/tinkerbell/boots/templates/rolebinding.yaml
@@ -1,15 +1,15 @@
-{{- if .Values.boots.deploy }}
+{{- if .Values.deploy }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.boots.roleBindingName }}
+  name: {{ .Values.roleBindingName }}
   namespace: {{ .Release.Namespace | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Values.boots.roleName }}
+  name: {{ .Values.roleName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.boots.name }}
+    name: {{ .Values.name }}
     namespace: {{ .Release.Namespace | quote }}
 {{- end }}
