--- a/charts/tinkerbell/hegel/templates/rolebinding.yaml
+++ b/charts/tinkerbell/hegel/templates/rolebinding.yaml
@@ -1,15 +1,15 @@
-{{- if .Values.hegel.deploy }}
+{{- if .Values.deploy }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Values.hegel.roleBindingName }}
+  name: {{ .Values.roleBindingName }}
   namespace: {{ .Release.Namespace | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Values.hegel.roleName }}
+  name: {{ .Values.roleName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.hegel.name }}
+    name: {{ .Values.name }}
     namespace: {{ .Release.Namespace | quote }}
 {{- end }}
