--- a/charts/tinkerbell/hegel/templates/service.yaml
+++ b/charts/tinkerbell/hegel/templates/service.yaml
@@ -1,17 +1,17 @@
-{{- if .Values.hegel.deploy -}}
+{{- if .Values.deploy -}}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.hegel.name }}
-  name: {{ .Values.hegel.name }}
+    app: {{ .Values.name }}
+  name: {{ .Values.name }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
   clusterIP: None
   ports:
-  - port: {{ .Values.hegel.service.port }}
+  - port: {{ .Values.service.port }}
     protocol: TCP
-    targetPort: {{ .Values.hegel.deployment.portName }}
+    targetPort: {{ .Values.deployment.portName }}
   selector:
-    app: {{ .Values.hegel.name }}
+    app: {{ .Values.name }}
 {{- end -}}
