--- a/charts/tinkerbell/rufio/templates/cluster-role-binding.yaml
+++ b/charts/tinkerbell/rufio/templates/cluster-role-binding.yaml
@@ -1,14 +1,14 @@
-{{- if .Values.rufio.deploy }}
+{{- if .Values.deploy }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.rufio.managerRoleBindingName }}
+  name: {{ .Values.managerRoleBindingName }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Values.rufio.managerRoleName }}
+  name: {{ .Values.managerRoleName }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Values.rufio.serviceAccountName }}
+  name: {{ .Values.serviceAccountName }}
   namespace: {{ .Release.Namespace | quote }}
 {{- end }}
