--- a/charts/tinkerbell/rufio/templates/cluster-role.yaml
+++ b/charts/tinkerbell/rufio/templates/cluster-role.yaml
@@ -1,9 +1,9 @@
-{{- if .Values.rufio.deploy }}---
+{{- if .Values.deploy }}---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   creationTimestamp: null
-  name: {{ .Values.rufio.managerRoleName }}
+  name: {{ .Values.managerRoleName }}
 rules:
 - apiGroups:
   - ""
