--- a/charts/tinkerbell/rufio/templates/service-account.yaml
+++ b/charts/tinkerbell/rufio/templates/service-account.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.rufio.deploy }}
+{{- if .Values.deploy }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.rufio.serviceAccountName }}
+  name: {{ .Values.serviceAccountName }}
   namespace: {{ .Release.Namespace | quote }}
 {{- end }}
