--- a/charts/tinkerbell/tink/templates/tink-controller/cluster-role-binding.yaml
+++ b/charts/tinkerbell/tink/templates/tink-controller/cluster-role-binding.yaml
@@ -1,14 +1,14 @@
-{{- if .Values.tink.controller.deploy }}
+{{- if .Values.controller.deploy }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name:  {{ .Values.tink.controller.roleBindingName }}
+  name:  {{ .Values.controller.roleBindingName }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Values.tink.controller.roleName }}
+  name: {{ .Values.controller.roleName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.tink.controller.name }}
+    name: {{ .Values.controller.name }}
     namespace: {{ .Release.Namespace | quote }}
 {{- end }}
