--- a/charts/tinkerbell/tink/templates/tink-controller/leader-election-role.yaml
+++ b/charts/tinkerbell/tink/templates/tink-controller/leader-election-role.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.tink.controller.deploy }}
+{{- if .Values.controller.deploy }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Values.tink.controller.tinkLeaderElectionRoleName }}
+  name: {{ .Values.controller.tinkLeaderElectionRoleName }}
   namespace: {{ .Release.Namespace | quote }}
 rules:
   - apiGroups:
