--- a/charts/tinkerbell/tink/templates/tink-server/rolebinding.yaml
+++ b/charts/tinkerbell/tink/templates/tink-server/rolebinding.yaml
@@ -1,15 +1,15 @@
-{{- if .Values.tink.server.deploy }}
+{{- if .Values.server.deploy }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.tink.server.roleBindingName }}
+  name: {{ .Values.server.roleBindingName }}
   namespace: {{ .Release.Namespace | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Values.tink.server.roleName }}
+  name: {{ .Values.server.roleName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.tink.server.name }}
+    name: {{ .Values.server.name }}
     namespace: {{ .Release.Namespace | quote }}
 {{- end }}
