Fix binary permissions as part of Github actions
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 6f0019b779ca9182086df09cb0dc2bc00ba9a3bb

--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -117,6 +117,10 @@ jobs:
         with:
           name: hegel
 
+      # The upload/download actions do not preserve permissions so they need explicitly setting.
+      - name: Fix binary permissions
+        run: chmod +x hegel-linux-*
+
       - name: Generate image tags
         uses: docker/metadata-action@v4
         id: meta
